--- a/Movie.html
+++ b/Movie.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>מלך האריות - פירוט</title>
-    <link rel="stylesheet" href="2.css">
+    <link rel="stylesheet" href="css/Movie.css">
     <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@300;400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
