--- a/Movie.html
+++ b/Movie.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <header class="NavBar">
-    <div class="logo"><img src="image/ARENA CINEMA (2).png" alt="cinema logo"></div>
+    <div class="logo"><img src="Photos/ARENA CINEMA (2).png" alt="cinema logo"></div>
     <nav class="menu">
         <a href="#!!!!לצרף קישור ברגע שמאחדים את הקבצים!!!!#">בית</a>
         <a href="#">אודות</a>
