--- a/OrderSum.html
+++ b/OrderSum.html
@@ -11,19 +11,24 @@
 <header class="NavBar">
     <div class="logo"><img src="Photos/ARENA CINEMA (2).png" alt="cinema logo"></div>
     <nav class="menu">
+        <div class="hamburger">
+            ☰
+        </div>
         <a href="#!!!!לצרף קישור ברגע שמאחדים את הקבצים!!!!#">בית</a>
         <a href="#">אודות</a>
         <a href="#">שירותים</a>
         <a href="#">מנויים</a>
         <a href="#">מזנון</a>
         <a href="#">דרושים</a>
-        <div class="hamburger">
-            ☰
-        </div>
     </nav>
 </header>
 <main>
+    <div>
+        <div>סיכום הזמנה</div>
+        <div>
 
+        </div>
+    </div>
 </main>
 <hr>
 <footer>
