--- a/OrderSum.html
+++ b/OrderSum.html
@@ -8,26 +8,35 @@
     <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@300;400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
-<header class="NavBar">
-    <div class="logo"><img src="Photos/ARENA CINEMA (2).png" alt="cinema logo"></div>
+<header class="navbar">
+  <div class="nav-inner">
+    <a class="brand" href="#">
+      <img src="Photos/logo2.png" alt="cinema logo">
+    </a>
     <nav class="menu">
-        <div class="hamburger">
-            ☰
-        </div>
-        <a href="#!!!!לצרף קישור ברגע שמאחדים את הקבצים!!!!#">בית</a>
-        <a href="#">אודות</a>
-        <a href="#">שירותים</a>
-        <a href="#">מנויים</a>
-        <a href="#">מזנון</a>
-        <a href="#">דרושים</a>
+      <a href="#">בית</a>
+      <a href="#">אודות</a>
+      <a href="#">שירותים</a>
+      <a href="#">מנויים</a>
+      <a href="#">מזנון</a>
+      <a href="#">דרושים</a>
     </nav>
+  </div>
 </header>
 <main>
-    <div>
-        <div>סיכום הזמנה</div>
+    <div class="Path">
+        דף הבית -> מלך האריות -> בחירת מושבים -> סיכום הזמנה
+    </div>
+    <div class="Sum">
+        <div class="HeadLine">
+            <h1>סיכום הזמנה</h1>
+        </div>
         <div>
 
         </div>
+    </div>
+    <div class="BackButton">
+        <a href="#"><strong>חזרה לדף הבית</strong></a>
     </div>
 </main>
 <hr>
