--- a/OrderSum.html
+++ b/OrderSum.html
@@ -10,6 +10,9 @@
 <body>
 <header class="navbar">
   <div class="nav-inner">
+    <div class="hamburger" aria-label="פתח תפריט" role="button">
+        ☰
+    </div>
     <a class="brand" href="#">
       <img src="Photos/logo2.png" alt="cinema logo">
     </a>
@@ -25,7 +28,7 @@
 </header>
 <main>
     <div class="Path">
-        דף הבית -> מלך האריות -> בחירת מושבים -> סיכום הזמנה
+        דף הבית ← מלך האריות ← בחירת מושבים ← סיכום הזמנה
     </div>
     <div class="Sum">
         <div class="HeadLine">
@@ -36,7 +39,7 @@
         </div>
     </div>
     <div class="BackButton">
-        <a href="#"><strong>חזרה לדף הבית</strong></a>
+        <a href="#" aria-label="חזרה לדף הבית"><strong>חזרה לדף הבית</strong></a>
     </div>
 </main>
 <hr>
@@ -76,5 +79,6 @@
         </div>
     </div>
 </footer>
+<script src="js/OrderSum.js"></script>
 </body>
 </html>
