--- a/Movie.html
+++ b/Movie.html
@@ -8,16 +8,23 @@
     <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@300;400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
-<header class="NavBar">
-    <div class="logo"><img src="Photos/ARENA CINEMA (2).png" alt="cinema logo"></div>
+<header class="navbar">
+  <div class="nav-inner">
+    <div class="hamburger" aria-label="פתח תפריט" role="button">
+        ☰
+    </div>
+    <a class="brand" href="#">
+      <img src="Photos/logo2.png" alt="cinema logo">
+    </a>
     <nav class="menu">
-        <a href="#!!!!לצרף קישור ברגע שמאחדים את הקבצים!!!!#">בית</a>
-        <a href="#">אודות</a>
-        <a href="#">שירותים</a>
-        <a href="#">מנויים</a>
-        <a href="#">מזנון</a>
-        <a href="#">דרושים</a>
+      <a href="#">בית</a>
+      <a href="#">אודות</a>
+      <a href="#">שירותים</a>
+      <a href="#">מנויים</a>
+      <a href="#">מזנון</a>
+      <a href="#">דרושים</a>
     </nav>
+  </div>
 </header>
 <main class="main">
     <div>
@@ -94,5 +101,6 @@
         </div>
     </div>
 </footer>
+<script src="js/Movie.js"></script>
 </body>
 </html>
