--- a/index.html
+++ b/index.html
@@ -7,3 +7,195 @@
     <link rel="stylesheet" href="indexStyle.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 </head>
+<body>
+    <header class="site-header">
+  <div class="logo-wrapper">
+    <img
+      src="ARENA CINEMA (2).png" alt="Arena Cinema logo"
+      class="site-logo"
+    class="NavBar">
+    <nav class="menu">
+        <a href="#!!!!לצרף קישור ברגע שמאחדים את הקבצים!!!!#">בית</a>
+        <a href="#">אודות</a>
+        <a href="#">שירותים</a>
+        <a href="#">מנויים</a>
+        <a href="#">מזנון</a>
+        <a href="#">דרושים</a>
+    </nav>
+</header>
+<!-- קרוסלה 1:-->
+<section class="containerFIRST">
+  <div id="carousel1" class="carousel slide" data-bs-ride="carousel" data-bs-interval="2500" aria-label="קרוסלת עדכונים">
+
+    <div class="carousel-indicators">
+      <button type="button" data-bs-target="#carousel1" data-bs-slide-to="0" class="active" aria-label="כרטיסים"></button>
+      <button type="button" data-bs-target="#carousel1" data-bs-slide-to="1" aria-label="VIP"></button>
+      <button type="button" data-bs-target="#carousel1" data-bs-slide-to="2" aria-label="LIONKING"></button>
+    </div>
+
+    <div class="carousel-inner rounded-4 overflow-hidden">
+      <div class="carousel-item active">
+        <img src="update.png" class="d-block w-100 promo-img" alt="VIP Seats">
+      </div>
+
+      <div class="carousel-item">
+        <img src="VIP.png" class="d-block w-100 promo-img" alt="מה חדש השבוע">
+      </div>
+
+      <div class="carousel-item">
+        <img src="VIP lionKing.png" class="d-block w-100 promo-img" alt="IMAX">
+      </div>
+    </div>
+
+    <!-- <button class="carousel-control-prev" type="button" data-bs-target="#carousel1" data-bs-slide="prev" aria-label="הקודם">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    </button> -->
+
+    <!-- <button class="carousel-control-next" type="button" data-bs-target="#carousel1" data-bs-slide="next" aria-label="הבא">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    </button> -->
+  </div>
+</section>
+
+
+<!--קרוסלה2-->
+<section class="container containerSEC">
+  <div class="carouselHeader">
+    <h2 class="hot-title">חדש בקולנוע</h2>
+  </div>
+
+  <div id="hotMoviesCarousel" class="carousel slide hot-carousel"
+       data-bs-ride="carousel" data-bs-interval="2500"
+       aria-label="קרוסלת הסרטים החמים">
+
+    <div class="carousel-inner rounded-4 overflow-hidden">
+
+      <div class="carousel-item active">
+        <div class="row g-2 row-cols-5">
+          <div class="col"><img src="lionKing.jpg" class="w-100 hot-poster" alt="סרט 1"></div>
+          <div class="col"><img src="cinderella.webp" class="w-100 hot-poster" alt="סרט 2"></div>
+          <div class="col"><img src="beautyAndBeast.webp" class="w-100 hot-poster" alt="סרט 3"></div>
+          <div class="col"><img src="mermarid.jpg" class="w-100 hot-poster" alt="סרט 4"></div>
+          <div class="col"><img src="frozen.jpg" class="w-100 hot-poster" alt="סרט 5"></div>
+        </div>
+      </div>
+
+      <div class="carousel-item">
+        <div class="row g-2 row-cols-5">
+          <div class="col"><img src="moana.webp" class="w-100 hot-poster" alt="סרט 6"></div>
+          <div class="col"><img src="stich.webp" class="w-100 hot-poster" alt="סרט 7"></div>
+          <div class="col"><img src="aladin.jpg" class="w-100 hot-poster" alt="סרט 8"></div>
+          <div class="col"><img src="toyStory.jpg" class="w-100 hot-poster" alt="סרט 9"></div>
+          <div class="col"><img src="tinkerbel.jpg" class="w-100 hot-poster" alt="סרט 10"></div>
+        </div>
+      </div>
+
+    </div>
+
+    <button class="carousel-control-prev" type="button" data-bs-target="#hotMoviesCarousel" data-bs-slide="prev" aria-label="הקודם">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    </button>
+
+    <button class="carousel-control-next" type="button" data-bs-target="#hotMoviesCarousel" data-bs-slide="next" aria-label="הבא">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    </button>
+
+  </div>
+</section>
+
+<!-- קרוסלה3 -->
+<section class="container containerTRD">
+  <div class="carouselHeader">
+    <h2 class="hot-title">סרטים מומלצים</h2>
+  </div>
+
+  <div id="familyMoviesCarousel"
+       class="carousel slide family-carousel"
+       data-bs-ride="carousel"
+       data-bs-interval="2800"
+       aria-label="קרוסלת סרטים למשפחות">
+
+    <div class="carousel-inner rounded-4 overflow-hidden">
+
+      <!-- שקופית 1: 5 פוסטרים -->
+      <div class="carousel-item active">
+        <div class="row g-2 row-cols-5">
+          <div class="col"><img src="monstars.jpg" class="w-100 hot-poster" alt="סרט 11"></div>
+          <div class="col"><img src="beautyAndBeast.webp" class="w-100 hot-poster" alt="סרט משפחתי 12"></div>
+          <div class="col"><img src="pinocio.webp" class="w-100 hot-poster" alt="סרט משפחתי 13"></div>
+          <div class="col"><img src="snowWhite.jpeg" class="w-100 hot-poster" alt="סרט משפחתי 14"></div>
+          <div class="col"><img src="minions.jpg" class="w-100 hot-poster" alt="סרט משפחתי 15"></div>
+        </div>
+      </div>
+
+      <!-- שקופית 2: מה שנוסף (לא נשבר שורה) -->
+      <div class="carousel-item">
+        <div class="row g-2 row-cols-5">
+          <div class="col"><img src="winnie-the-pooh.jpg" class="w-100 hot-poster" alt="סרט משפחתי 16"></div>
+          <div class="col"><img src="onward.jpeg" class="w-100 hot-poster" alt="סרט משפחתי 17"></div>
+          <div class="col"><img src="jungle story.jpg" class="w-100 hot-poster" alt="סרט משפחתי 18"></div>
+          <div class="col"><img src="cars.jpg" class="w-100 hot-poster" alt="סרט משפחתי 19"></div>
+          <div class="col"><img src="molan.jpg" class="w-100 hot-poster" alt="סרט משפחתי 20"></div>
+        </div>
+      </div>
+
+    </div>
+
+    <button class="carousel-control-prev" type="button"
+            data-bs-target="#familyMoviesCarousel" data-bs-slide="prev"
+            aria-label="הקודם">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    </button>
+
+    <button class="carousel-control-next" type="button"
+            data-bs-target="#familyMoviesCarousel" data-bs-slide="next"
+            aria-label="הבא">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    </button>
+
+  </div>
+</section>
+
+  </div>
+</header>
+<hr class="hr">
+<footer>
+    <div class="Footer">
+        <div><strong class="Head">קישורים מהירים</strong>
+            <ul class="FootList">
+                <li><a href="#">עמוד הבית</a></li>
+                <li><a href="#">אודות</a></li>
+                <li><a href="#">צור קשר</a></li>
+                <li><a href="#">העגלה שלי</a></li>
+            </ul>
+        </div>
+        <div><strong class="Head">יצירת קשר</strong>
+            <ul class="FootList">
+                <li>arenacinema@gmail.com</li>
+                <li>073-1234567</li>
+                <li>רחוב דיזנגוף 123, תל אביב</li>
+            </ul>
+        </div>
+        <div><strong class="Head">שעות פעילות</strong>
+            <ul class="FootList">
+                <li>ראשון - רביעי: 10:00-00:00</li>
+                <li>חמישי: 10:00-01:00</li>
+                <li>שישי: 10:00-15:00</li>
+                <li>מוצ״ש: 19:00-00:00</li>
+            </ul>
+        </div>
+        <div><strong class="Head">מידע נוסף</strong>
+            <ul class="FootList">
+                <li><a href="#">תנאים והגבלות</a></li>
+                <li><a href="#">מדיניות פרטיות</a></li>
+                <li><a href="#">שאלות ותשובות</a></li>
+                <li><a href="#">נגישות</a></li>
+                <li><a href="#">דרושים</a></li>
+            </ul>
+        </div>
+    </div>
+</footer>
+</body>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
+</html>
