feat: add images

--- a/index.html
+++ b/index.html
@@ -35,15 +35,15 @@
 
     <div class="carousel-inner rounded-4 overflow-hidden">
       <div class="carousel-item active">
-        <img src="update.png" class="d-block w-100 promo-img" alt="VIP Seats">
+        <img src="images/update.png" class="d-block w-100 promo-img" alt="VIP Seats">
       </div>
 
       <div class="carousel-item">
-        <img src="VIP.png" class="d-block w-100 promo-img" alt="מה חדש השבוע">
+        <img src="images/VIP.png" class="d-block w-100 promo-img" alt="מה חדש השבוע">
       </div>
 
       <div class="carousel-item">
-        <img src="VIP lionKing.png" class="d-block w-100 promo-img" alt="IMAX">
+        <img src="images/VIP lionKing.png" class="d-block w-100 promo-img" alt="IMAX">
       </div>
     </div>
 
@@ -72,21 +72,21 @@
 
       <div class="carousel-item active">
         <div class="row g-2 row-cols-5">
-          <div class="col"><img src="lionKing.jpg" class="w-100 hot-poster" alt="סרט 1"></div>
-          <div class="col"><img src="cinderella.webp" class="w-100 hot-poster" alt="סרט 2"></div>
-          <div class="col"><img src="beautyAndBeast.webp" class="w-100 hot-poster" alt="סרט 3"></div>
-          <div class="col"><img src="mermarid.jpg" class="w-100 hot-poster" alt="סרט 4"></div>
-          <div class="col"><img src="frozen.jpg" class="w-100 hot-poster" alt="סרט 5"></div>
+          <div class="col"><img src="images/lionKing.jpg" class="w-100 hot-poster" alt="סרט 1"></div>
+          <div class="col"><img src="images/cinderella.webp" class="w-100 hot-poster" alt="סרט 2"></div>
+          <div class="col"><img src="images/beautyAndBeast.webp" class="w-100 hot-poster" alt="סרט 3"></div>
+          <div class="col"><img src="images/mermarid.jpg" class="w-100 hot-poster" alt="סרט 4"></div>
+          <div class="col"><img src="images/frozen.jpg" class="w-100 hot-poster" alt="סרט 5"></div>
         </div>
       </div>
 
       <div class="carousel-item">
         <div class="row g-2 row-cols-5">
-          <div class="col"><img src="moana.webp" class="w-100 hot-poster" alt="סרט 6"></div>
-          <div class="col"><img src="stich.webp" class="w-100 hot-poster" alt="סרט 7"></div>
-          <div class="col"><img src="aladin.jpg" class="w-100 hot-poster" alt="סרט 8"></div>
-          <div class="col"><img src="toyStory.jpg" class="w-100 hot-poster" alt="סרט 9"></div>
-          <div class="col"><img src="tinkerbel.jpg" class="w-100 hot-poster" alt="סרט 10"></div>
+          <div class="col"><img src="images/moana.webp" class="w-100 hot-poster" alt="סרט 6"></div>
+          <div class="col"><img src="images/stich.webp" class="w-100 hot-poster" alt="סרט 7"></div>
+          <div class="col"><img src="images/aladin.jpg" class="w-100 hot-poster" alt="סרט 8"></div>
+          <div class="col"><img src="images/toyStory.jpg" class="w-100 hot-poster" alt="סרט 9"></div>
+          <div class="col"><img src="images/tinkerbel.jpg" class="w-100 hot-poster" alt="סרט 10"></div>
         </div>
       </div>
 
@@ -120,22 +120,22 @@
       <!-- שקופית 1: 5 פוסטרים -->
       <div class="carousel-item active">
         <div class="row g-2 row-cols-5">
-          <div class="col"><img src="monstars.jpg" class="w-100 hot-poster" alt="סרט 11"></div>
-          <div class="col"><img src="beautyAndBeast.webp" class="w-100 hot-poster" alt="סרט משפחתי 12"></div>
-          <div class="col"><img src="pinocio.webp" class="w-100 hot-poster" alt="סרט משפחתי 13"></div>
-          <div class="col"><img src="snowWhite.jpeg" class="w-100 hot-poster" alt="סרט משפחתי 14"></div>
-          <div class="col"><img src="minions.jpg" class="w-100 hot-poster" alt="סרט משפחתי 15"></div>
+          <div class="col"><img src="images/monstars.jpg" class="w-100 hot-poster" alt="סרט 11"></div>
+          <div class="col"><img src="images/beautyAndBeast.webp" class="w-100 hot-poster" alt="סרט משפחתי 12"></div>
+          <div class="col"><img src="images/pinocio.webp" class="w-100 hot-poster" alt="סרט משפחתי 13"></div>
+          <div class="col"><img src="images/snowWhite.jpeg" class="w-100 hot-poster" alt="סרט משפחתי 14"></div>
+          <div class="col"><img src="images/minions.jpg" class="w-100 hot-poster" alt="סרט משפחתי 15"></div>
         </div>
       </div>
 
       <!-- שקופית 2: מה שנוסף (לא נשבר שורה) -->
       <div class="carousel-item">
         <div class="row g-2 row-cols-5">
-          <div class="col"><img src="winnie-the-pooh.jpg" class="w-100 hot-poster" alt="סרט משפחתי 16"></div>
-          <div class="col"><img src="onward.jpeg" class="w-100 hot-poster" alt="סרט משפחתי 17"></div>
-          <div class="col"><img src="jungle story.jpg" class="w-100 hot-poster" alt="סרט משפחתי 18"></div>
-          <div class="col"><img src="cars.jpg" class="w-100 hot-poster" alt="סרט משפחתי 19"></div>
-          <div class="col"><img src="molan.jpg" class="w-100 hot-poster" alt="סרט משפחתי 20"></div>
+          <div class="col"><img src="images/winnie-the-pooh.jpg" class="w-100 hot-poster" alt="סרט משפחתי 16"></div>
+          <div class="col"><img src="images/onward.jpeg" class="w-100 hot-poster" alt="סרט משפחתי 17"></div>
+          <div class="col"><img src="images/jungle story.jpg" class="w-100 hot-poster" alt="סרט משפחתי 18"></div>
+          <div class="col"><img src="images/cars.jpg" class="w-100 hot-poster" alt="סרט משפחתי 19"></div>
+          <div class="col"><img src="images/molan.jpg" class="w-100 hot-poster" alt="סרט משפחתי 20"></div>
         </div>
       </div>
 
