--- a/EndPage.html
+++ b/EndPage.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>ARENACINEMA - האתר בבנייה</title>
 
-  <link rel="stylesheet" href="EndPageStyle.css" />
+  <link rel="stylesheet" href="css/EndPageStyle.css" />
   <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;700&display=swap" rel="stylesheet">
 </head>
 
