--- a/index.html
+++ b/index.html
@@ -4,14 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>index</title>
-    <link rel="stylesheet" href="indexStyle.css">
+    <link rel="stylesheet" href="css/index.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 </head>
 <body>
     <header class="site-header">
   <div class="logo-wrapper">
-    <img
-      src="ARENA CINEMA (2).png" alt="Arena Cinema logo"
+    <img src="ARENA CINEMA (2).png" alt="Arena Cinema logo"
       class="site-logo"
     class="NavBar">
     <nav class="menu">
