--- a/index.html
+++ b/index.html
@@ -8,19 +8,20 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 </head>
 <body>
-    <header class="site-header">
-  <div class="logo-wrapper">
-    <img src="ARENA CINEMA (2).png" alt="Arena Cinema logo"
-      class="site-logo"
-    class="NavBar">
+<header class="navbar">
+  <div class="nav-inner">
+    <a class="brand" href="#">
+      <img src="images/logo2.png" alt="cinema logo">
+    </a>
     <nav class="menu">
-        <a href="#!!!!לצרף קישור ברגע שמאחדים את הקבצים!!!!#">בית</a>
-        <a href="#">אודות</a>
-        <a href="#">שירותים</a>
-        <a href="#">מנויים</a>
-        <a href="#">מזנון</a>
-        <a href="#">דרושים</a>
+      <a href="#">בית</a>
+      <a href="#">אודות</a>
+      <a href="#">שירותים</a>
+      <a href="#">מנויים</a>
+      <a href="#">מזנון</a>
+      <a href="#">דרושים</a>
     </nav>
+  </div>
 </header>
 <!-- קרוסלה 1:-->
 <section class="containerFIRST">
