--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 <body>
 <header class="navbar">
   <div class="nav-inner">
+     <div class="hamburger" aria-label="פתח תפריט" role="button">
+        ☰
+    </div>
     <a class="brand" href="#">
       <img src="images/logo2.png" alt="cinema logo">
     </a>
@@ -195,6 +198,7 @@
         </div>
     </div>
 </footer>
+<script src="js/index.js"></script>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
