--- a/summary.html
+++ b/summary.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>סיכום הזמנה - מלך האריות</title>
-    <link rel="stylesheet" href="css/OrderSum.css">
+    <link rel="stylesheet" href="css/summary.css">
     <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@300;400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -79,6 +79,6 @@
         </div>
     </div>
 </footer>
-<script src="js/OrderSum.js"></script>
+<script src="js/summary.js"></script>
 </body>
 </html>
