feat: add links to websites

--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
       <img src="images/logo2.png" alt="cinema logo">
     </a>
     <nav class="menu">
-      <a href="#">בית</a>
-      <a href="#">אודות</a>
-      <a href="#">שירותים</a>
-      <a href="#">מנויים</a>
-      <a href="#">מזנון</a>
-      <a href="#">דרושים</a>
+      <a href="index.html">בית</a> 
+      <a href="EndPage.html">אודות</a>
+      <a href="EndPage.html">שירותים</a>
+      <a href="EndPage.html">מנויים</a>
+      <a href="EndPage.html">מזנון</a>
+      <a href="EndPage.html">דרושים</a>
     </nav>
   </div>
 </header>
@@ -165,10 +165,10 @@
     <div class="Footer">
         <div><strong class="Head">קישורים מהירים</strong>
             <ul class="FootList">
-                <li><a href="#">עמוד הבית</a></li>
-                <li><a href="#">אודות</a></li>
-                <li><a href="#">צור קשר</a></li>
-                <li><a href="#">העגלה שלי</a></li>
+                <li><a href="index.html">עמוד הבית</a></li>
+                <li><a href="EndPage.html">אודות</a></li>
+                <li><a href="EndPage.html">צור קשר</a></li>
+                <li><a href="EndPage.html">העגלה שלי</a></li>
             </ul>
         </div>
         <div><strong class="Head">יצירת קשר</strong>
@@ -188,11 +188,11 @@
         </div>
         <div><strong class="Head">מידע נוסף</strong>
             <ul class="FootList">
-                <li><a href="#">תנאים והגבלות</a></li>
-                <li><a href="#">מדיניות פרטיות</a></li>
-                <li><a href="#">שאלות ותשובות</a></li>
-                <li><a href="#">נגישות</a></li>
-                <li><a href="#">דרושים</a></li>
+                <li><a href="EndPage.html">תנאים והגבלות</a></li>
+                <li><a href="EndPage.html">מדיניות פרטיות</a></li>
+                <li><a href="EndPage.html">שאלות ותשובות</a></li>
+                <li><a href="EndPage.html">נגישות</a></li>
+                <li><a href="EndPage.html">דרושים</a></li>
             </ul>
         </div>
     </div>
