--- a/Movie.html
+++ b/Movie.html
@@ -34,7 +34,7 @@
                     <h1>מלך האריות</h1>
                 </div>
                 <div class="Path">
-                    תפריט -> מלך האריות
+                    תפריט ← מלך האריות
                 </div>
                 <div class="Details">
                     <div class="M"><strong>אורך:</strong> שעה ו-58 דקות</div>
