--- a/Movie.html
+++ b/Movie.html
@@ -58,7 +58,7 @@
             </div>
         </div>
         <div class="PurcashTik">
-            <a href="#"><strong>לרכישת כרטיסים</strong></a>
+            <a href="booking.html"><strong>לרכישת כרטיסים</strong></a>
         </div>
     </div>
 </main>
