--- a/booking.html
+++ b/booking.html
@@ -5,29 +5,32 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>בחירת מקומות</title>
   <link rel="stylesheet" href="css/booking.css" />
+  <link rel="stylesheet" href="css/main.css">
   <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@300;400;500;700&display=swap" rel="stylesheet">
 </head>
 
 <body class="booking-page">
 <header class="navbar">
   <div class="nav-inner">
+    <div class="hamburger" aria-label="פתח תפריט" role="button">
+        ☰
+    </div>
     <a class="brand" href="#">
-      <img src="logo2.png" alt="cinema logo">
+      <img src="images/logo2.png" alt="cinema logo">
     </a>
     <nav class="menu">
-      <a href="#">בית</a>
-      <a href="#">אודות</a>
-      <a href="#">שירותים</a>
-      <a href="#">מנויים</a>
-      <a href="#">מזנון</a>
-      <a href="#">דרושים</a>
+      <a href="index.html">בית</a> 
+      <a href="EndPage.html">אודות</a>
+      <a href="EndPage.html">שירותים</a>
+      <a href="EndPage.html">מנויים</a>
+      <a href="EndPage.html">מזנון</a>
+      <a href="EndPage.html">דרושים</a>
     </nav>
   </div>
 </header>
 <main class="container">
     <div class="page-title">
         <h1>מלך האריות</h1>
-        <span class="badge">בחירת מקומות</span>
     </div>
     <div class="booking-layout">
     <aside class="booking-sidebar">
@@ -67,7 +70,7 @@
              <p id="showSeatsHint" class="hint"> בחר מיקום, יום ושעה כדי להפעיל את הכפתור.</p>
         </section>
         <section class="card movie-card">
-            <img src="lionking.jpg" alt="מלך האריות" class="movie-poster">
+            <img src="images/lionKing.jpg" alt="מלך האריות" class="movie-poster">
         </section>
     </aside>
 
@@ -119,7 +122,7 @@
   <hr/>
   <footer>
     <div class="Footer">
-        <div><h5>קישורים מהירים</h5>
+        <div><strong class="Head">קישורים מהירים</strong>
             <ul class="FootList">
                 <li><a href="#">עמוד הבית</a></li>
                 <li><a href="#">אודות</a></li>
@@ -127,14 +130,14 @@
                 <li><a href="#">העגלה שלי</a></li>
             </ul>
         </div>
-        <div><h5>יצירת קשר</h5>
+        <div><strong class="Head">יצירת קשר</strong>
             <ul class="FootList">
                 <li>arenacinema@gmail.com</li>
                 <li>073-1234567</li>
                 <li>רחוב דיזנגוף 123, תל אביב</li>
             </ul>
         </div>
-        <div><h5>שעות פעילות</h5>
+        <div><strong class="Head">שעות פעילות</strong>
             <ul class="FootList">
                 <li>ראשון - רביעי: 10:00-00:00</li>
                 <li>חמישי: 10:00-01:00</li>
@@ -142,7 +145,7 @@
                 <li>מוצ״ש: 19:00-00:00</li>
             </ul>
         </div>
-        <div><h5>מידע נוסף</h5>
+        <div><strong class="Head">מידע נוסף</strong>
             <ul class="FootList">
                 <li><a href="#">תנאים והגבלות</a></li>
                 <li><a href="#">מדיניות פרטיות</a></li>
@@ -154,5 +157,6 @@
     </div>
 </footer>
  <script src="js/booking.js"></script>
+ <script src="js/main.js"></script>
 </body>
 </html>
