--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
     <title>index</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/main.css">
+    <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@300;400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
 <header class="navbar">
   <div class="nav-inner">
-     <div class="hamburger" aria-label="פתח תפריט" role="button">
+    <div class="hamburger" aria-label="פתח תפריט" role="button">
         ☰
     </div>
     <a class="brand" href="#">
@@ -75,7 +77,7 @@
 
       <div class="carousel-item active">
         <div class="row g-2 row-cols-5">
-          <div class="col"><img src="images/lionKing.jpg" class="w-100 hot-poster" alt="סרט 1"></div>
+          <div class="col"><a href="Movie.html"><img src="images/lionKing.jpg" class="w-100 hot-poster" alt="סרט 1"></a></div>
           <div class="col"><img src="images/cinderella.webp" class="w-100 hot-poster" alt="סרט 2"></div>
           <div class="col"><img src="images/beautyAndBeast.webp" class="w-100 hot-poster" alt="סרט 3"></div>
           <div class="col"><img src="images/mermarid.jpg" class="w-100 hot-poster" alt="סרט 4"></div>
@@ -198,6 +200,7 @@
     </div>
 </footer>
 <script src="js/index.js"></script>
+<script src="js/main.js"></script>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
