fix: adjust changes in all pages

--- a/summary.html
+++ b/summary.html
@@ -65,7 +65,7 @@
     </div>
 </div>
 <div class="BackButton">
-    <a href="#" aria-label="חזרה לדף הבית"><strong>חזרה לדף הבית</strong></a>
+    <a href="EndPage.html" aria-label="לרכישת כרטיסים"><strong>לרכישת כרטיסים</strong></a>
 </div>
 </main>
 <hr>
