--- a/Movie.html
+++ b/Movie.html
@@ -70,10 +70,10 @@
     <div class="Footer">
         <div><strong class="Head">קישורים מהירים</strong>
             <ul class="FootList">
-                <li><a href="#">עמוד הבית</a></li>
-                <li><a href="#">אודות</a></li>
-                <li><a href="#">צור קשר</a></li>
-                <li><a href="#">העגלה שלי</a></li>
+                <li><a href="index.html">עמוד הבית</a></li>
+                <li><a href="EndPage.html">אודות</a></li>
+                <li><a href="EndPage.html">צור קשר</a></li>
+                <li><a href="EndPage.html">העגלה שלי</a></li>
             </ul>
         </div>
         <div><strong class="Head">יצירת קשר</strong>
@@ -93,11 +93,11 @@
         </div>
         <div><strong class="Head">מידע נוסף</strong>
             <ul class="FootList">
-                <li><a href="#">תנאים והגבלות</a></li>
-                <li><a href="#">מדיניות פרטיות</a></li>
-                <li><a href="#">שאלות ותשובות</a></li>
-                <li><a href="#">נגישות</a></li>
-                <li><a href="#">דרושים</a></li>
+                <li><a href="EndPage.html">תנאים והגבלות</a></li>
+                <li><a href="EndPage.html">מדיניות פרטיות</a></li>
+                <li><a href="EndPage.html">שאלות ותשובות</a></li>
+                <li><a href="EndPage.html">נגישות</a></li>
+                <li><a href="EndPage.html">דרושים</a></li>
             </ul>
         </div>
     </div>
