--- a/booking.html
+++ b/booking.html
@@ -4,13 +4,13 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>בחירת מקומות</title>
-  <link rel="stylesheet" href="css/booking.css" />
   <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="css/booking.css" />
   <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@300;400;500;700&display=swap" rel="stylesheet">
 </head>
 
 <body class="booking-page">
-<header class="navbar">
+<header class="site-navbar">
   <div class="nav-inner">
     <div class="hamburger" aria-label="פתח תפריט" role="button">
         ☰
@@ -28,7 +28,7 @@
     </nav>
   </div>
 </header>
-<main class="container">
+<main class="booking-container">
     <div class="page-title">
         <h1>מלך האריות</h1>
     </div>
