--- a/summary.html
+++ b/summary.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="he" dir="rtl">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>סיכום הזמנה - מלך האריות</title>
-    <link rel="stylesheet" href="css/summary.css">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/summary.css">
     <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@300;400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
-<header class="navbar">
+<header class="site-navbar">
   <div class="nav-inner">
     <div class="hamburger" aria-label="פתח תפריט" role="button">
         ☰
@@ -65,7 +65,7 @@
     </div>
 </div>
 <div class="BackButton">
-    <a href="EndPage.html" aria-label="לרכישת כרטיסים"><strong>לרכישת כרטיסים</strong></a>
+    <a href="index.html" aria-label="לרכישת כרטיסים"><strong>לרכישת כרטיסים</strong></a>
 </div>
 </main>
 <hr>
