fix: improve pages

--- a/summary.html
+++ b/summary.html
@@ -14,7 +14,7 @@
     <div class="hamburger" aria-label="פתח תפריט" role="button">
         ☰
     </div>
-    <a class="brand" href="#">
+    <a class="brand" href="index.html">
       <img src="images/logo2.png" alt="cinema logo">
     </a>
     <nav class="menu">
