--- a/Movie.html
+++ b/Movie.html
@@ -14,7 +14,7 @@
     <div class="hamburger" aria-label="פתח תפריט" role="button">
         ☰
     </div>
-    <a class="brand" href="#">
+    <a class="brand" href="index.html">
       <img src="images/logo2.png" alt="cinema logo">
     </a>
     <nav class="menu">
@@ -33,9 +33,6 @@
             <div>
                 <div class="NameOfTheMovie">
                     <h1>מלך האריות</h1>
-                </div>
-                <div class="Path">
-                    תפריט ← מלך האריות
                 </div>
                 <div class="Details">
                     <div class="M"><strong>אורך:</strong> שעה ו-58 דקות</div>
