--- a/booking.html
+++ b/booking.html
@@ -15,7 +15,7 @@
     <div class="hamburger" aria-label="פתח תפריט" role="button">
         ☰
     </div>
-    <a class="brand" href="#">
+    <a class="brand" href="index.html">
       <img src="images/logo2.png" alt="cinema logo">
     </a>
     <nav class="menu">
@@ -52,9 +52,9 @@
             <label for="day">יום:</label>
             <select id="day">
                 <option value="" disabled selected hidden>בחר יום</option>
-                <option value="2026-01-02">02/01/2026</option>
-                <option value="2026-01-03">03/01/2026</option>
-                <option value="2026-01-04">04/01/2026</option>
+                <option value="2026-02-24">24/02/2026</option>
+                <option value="2026-02-25">25/02/2026</option>
+                <option value="2026-02-26">26/02/2026</option>
             </select>
         </div>
         <div class="form-row">
